# VibeMLTestbed

./: .gitignore  LICENSE  README.md  config.yaml  config_cifar10.yaml  config_sgd.yaml  pyproject.toml  pytest.ini
docs/: developer_guide.md  project_description.md  project_setup_description.md  user_guide.md  user_stories.md  user_stories_status.md
src/: main.py  transformations.py
src/data/: __init__.py  cifar100_data.py  cifar10_data.py  mnist_data.py
src/engine/: __init__.py  losses.py  metrics.py  trainer.py
src/engine/optimizers/: adam_optimizer.py  rmsprop_optimizer.py  sgd_optimizer.py
src/models/: simple_nn.py
tests/: test_cifar100_data.py  test_losses.py  test_main.py  test_metrics.py  test_trainer.py
